--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     <main>
         <div class="player player-0 player-active">
             <h2 class="name" id="name-0">Player 1</h2>
-            <p class="score" id="score-0">0</p>
+            <p class="score" id="score-0">34</p>
             <div class="current">
               <p class="current-label">Current</p>
-              <p class="current-score" id="current-0">0</p>
+              <p class="current-score" id="current-0">87</p>
             </div>
         </div>
 
         <div class="player player-1">
             <h2 class="name" id="name-1">Player 2</h2>
-            <p class="score" id="score-1">0</p>
+            <p class="score" id="score-1">23</p>
             <div class="current">
               <p class="current-label">Current</p>
-              <p class="current-score" id="current-1">0</p>
+              <p class="current-score" id="current-1">67</p>
             </div>
         </div>
 
-        <img src="dice-six-faces-one.png" alt="Playing dice" class="dice" />
+        <img src="dice-one.png" alt="Playing dice" class="dice" />
          <button class="btn btn-new">New game</button>
         <button class="btn btn-roll">Roll dice</button>
         <button class="btn btn-hold">Hold</button>
