changed name of dice src to include numbers for Math.random function

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
 
-        <img src="dice-one.png" alt="Playing dice" class="dice" />
+        <img src="dice-1.png" alt="Playing dice" class="dice" />
          <button class="btn btn-new">New game</button>
         <button class="btn btn-roll">Roll dice</button>
         <button class="btn btn-hold">Hold</button>
