--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <img src="dice-1.png" alt="Playing dice" class="dice" />
          <button class="btn btn-new">New game</button>
         <button class="btn btn-roll">Roll dice</button>
+        <p class="btn winner-message">We have a winner!!!</p>
         <button class="btn btn-hold">Hold</button>
     </main>
     
